--- a/week1/src/style.css
+++ b/week1/src/style.css
@@ -1,8 +1,174 @@
-#app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+.header {
+  width: 100%;
+  height: 10rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(145, 191, 235);
+  margin-bottom: 1rem;
+  cursor: pointer;
+}
+.header__title {
+  color: white;
+  font-size: 2rem;
+}
+
+.main {
+  display: flex;
+}
+
+.sidebar {
+  border-radius: 0.5rem;
+  width: 10%;
+  height: 8rem;
+  background-color: rgb(255, 173, 173);
+  padding: 0.5rem 0.5rem;
+  margin: 0 1rem 0 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.sidebar__title {
+  font-size: 1.5rem;
+}
+.sidebar__options {
+  margin-top: 0.25rem;
+}
+.sidebar__options-li {
+  border-radius: 0.5rem;
+  margin-top: 0.5rem;
+  height: 1.5rem;
+}
+.sidebar__options-li > button {
+  background-color: white;
+  color: black;
+  width: 100%;
+  height: 100%;
+}
+.sidebar__options-li > button :active {
+  background-color: rgb(255, 124, 124);
+  color: white;
+}
+.sidebar__options-li > button.active {
+  background-color: rgb(255, 124, 124);
+  color: white;
+}
+
+.sidebar__options-li > button:hover {
+  background-color: rgb(255, 124, 124);
+  color: white;
+  cursor: pointer;
+}
+
+.menu {
+  width: 75%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.menu__title {
+  display: none;
+}
+.menu__box {
+  width: 48%;
+  height: 10rem;
+  box-shadow: 0px 3px 8px rgba(87, 82, 76, 0.15);
+  border-radius: 0.5rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  cursor: pointer;
+  margin-bottom: 1rem;
+  background: white;
+}
+.menu__box:hover {
+  background: rgb(163, 162, 162);
+  color: white;
+}
+.menu__box__img {
+  width: 25%;
+}
+.menu__box__text {
+  width: 60%;
+  max-height: 70%;
+  overflow: hidden;
+}
+.menu__box__text-title {
+  font-size: 1.75rem;
+  display: block;
+  margin-bottom: 0.5rem;
+}
+.menu__box__text-price {
+  font-size: 1.25rem;
+  display: block;
+  margin-bottom: 0.5rem;
+}
+.menu__box__text-description {
+  font-size: 1rem;
+  display: block;
+  width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  word-break: break-all;
+  white-space: normal;
+  line-height: 1;
+  height: 3em;
+  text-align: left;
+  word-wrap: break-word;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+.cart {
+  width: 15%;
+  position: sticky;
+  top: 1rem;
+  border-radius: 0.5rem;
+  height: 16rem;
+  background-color: rgb(255, 173, 173);
+  padding: 0.75rem 1rem;
+  margin: 0 1rem 0 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.cart__title {
+  font-size: 1.5rem;
+  height: 40%;
+  border-bottom: 3px solid white;
+}
+.cart__price {
+  width: 100%;
+  height: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-bottom: 3px solid white;
+}
+.cart__price p {
+  display: block;
+}
+.cart__price-title {
+  font-size: 1.5rem;
+  margin-bottom: 0.75rem;
+}
+.cart__footer {
+  height: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cart__footer-button {
+  width: 5rem;
+  height: 2rem;
+  border-radius: 0.5rem;
+  color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
+  margin-right: 0.5rem;
+}
+.cart__footer-button:hover {
+  color: white;
+  background-color: rgb(255, 124, 124);
+  cursor: pointer;
 }
