--- a/week1/src/style.css
+++ b/week1/src/style.css
@@ -1,3 +1,4 @@
+/* header */
 .header {
   width: 100%;
   height: 10rem;
@@ -17,6 +18,7 @@
   display: flex;
 }
 
+/* sidebar */
 .sidebar {
   border-radius: 0.5rem;
   width: 10%;
@@ -54,15 +56,17 @@
   background-color: rgb(255, 124, 124);
   color: white;
 }
-
 .sidebar__options > button:hover {
   background-color: rgb(255, 124, 124);
   color: white;
   cursor: pointer;
 }
 
+/* hamburger menu */
 .menu {
   width: 75%;
+}
+.menu__list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -122,6 +126,8 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
 }
+
+/* cart */
 .cart {
   width: 18rem;
   position: sticky;
@@ -135,7 +141,6 @@
   flex-direction: column;
   justify-content: space-between;
 }
-
 .cart__title {
   font-size: 1.5rem;
   height: 40%;
