feat: MVC 패턴 폴더구조 세팅

--- a/week1/src/reset.css
+++ b/week1/src/reset.css
@@ -135,5 +135,5 @@ button {
 @font-face {
   font-family: 'JejuMyeongjo';
   font-weight: 400;
-  src: url('../public/fonts/JejuMyeongjo.ttf') format('truetype');
+  src: url('/fonts/JejuMyeongjo.ttf') format('truetype');
 }
