--- a/week3/src/index.css
+++ b/week3/src/index.css
@@ -1,15 +1,17 @@
 body {
   margin: 0;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; */
   background: black;
+  overflow-y: hidden;
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+p,
+figure {
+  margin: 0;
+  padding: 0;
 }
 
 code {
@@ -20,7 +22,8 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   margin-top: 2rem;
   width: 100%;
+  height: 100vh;
 }
